; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_q_math.c_Q_isnan.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_q_math.c_Q_isnan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { float, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Q_isnan(float %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca %struct.TYPE_2__, align 4
  store float %0, float* %2, align 4
  %4 = load float, float* %2, align 4
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  store float %4, float* %5, align 4
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = and i32 %7, 2147483647
  store i32 %8, i32* %6, align 4
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = sub nsw i32 2139095040, %10
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 1
  store i32 %11, i32* %12, align 4
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = lshr i32 %14, 31
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
